// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CloseButton /> should has className from className prop 1`] = `
<button
  className="test-class-name"
  onClick={[MockFunction]}
>
  <svg
    height="22"
    width="22"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      className="fill-primary dark:fill-white"
      d="M21 21L1 1M21 1L1 21"
      strokeWidth="2"
    />
  </svg>
</button>
`;

exports[`<CloseButton /> should renders correct <CloseButton /> 1`] = `
<button
  onClick={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
>
  <svg
    height="22"
    width="22"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      className="fill-primary dark:fill-white"
      d="M21 21L1 1M21 1L1 21"
      strokeWidth="2"
    />
  </svg>
</button>
`;
